Fix desktop alignment

--- a/src/css/trunche.css
+++ b/src/css/trunche.css
@@ -42,7 +42,8 @@ body, html {
 }
 
 .content {
-position: absolute;
+    position: absolute;
+    display: contents;
 }
 
 .navbar.bg-white {
